# ASCM

./: .gitignore  .pypirc.template_renameme  .pypirc_template_renameme  .pypirc_template_renameme.txt  LICENSE  MANIFEST.in  README.md  accelerated_sequence_clustering.cpp  accelerated_sequence_clustering.h  accelerated_sequence_clustering.i  accelerated_sequence_clustering.py  accelerated_sequence_clustering_wrap.cxx  draw_plots4exp2_new.py  draw_plots4exp3_2.py  draw_plots4exp3_3.py  my_sequence_clustering.py  process_theta.py  pypi_info.txt  pyproject.toml  pyproject.toml.orig  runme_local.bat  runme_local.sh  runme_pypi.sh  runme_test_cpp.sh  setup.py  test  test.cpp  test_TSP_tour.py  test_ascm.py  test_ascm_exp1 (E En's conflicted copy 2023-08-17).py  test_ascm_exp1.py  test_ascm_theta_max_exp2.py  test_ascm_theta_max_exp2_02.py  test_ascm_theta_realdata_exp3.py  test_ascm_theta_realdata_exp3_02.py  test_ascm_theta_realdata_exp3_02_parallel.py  test_sequence_clustering.py  tmp01.py
50k/: Syn_n_50000_d_2_seed_1.csv  Syn_n_50000_d_2_seed_2.csv  Syn_n_50000_d_2_seed_3.csv
datasets/: Syn_n_10000_d_2_seed_1.csv  Syn_n_10000_d_2_seed_5.csv  Syn_n_50000_d_2_seed_0.csv  Syn_n_50000_d_2_seed_5.csv  Syn_n_50000_d_2_seed_8.csv  Syn_n_5000_d_2_seed_0.csv  Syn_n_5000_d_2_seed_5.csv  Syn_n_5000_d_2_seed_6.csv
datasets1/: Syn_n_100000_d_2_seed_6.csv  Syn_n_100000_d_2_seed_7.csv  Syn_n_10000_d_2_seed_0.csv  Syn_n_10000_d_2_seed_3.csv  Syn_n_10000_d_2_seed_4.csv  Syn_n_10000_d_2_seed_6.csv  Syn_n_10000_d_2_seed_8.csv  Syn_n_10000_d_2_seed_9.csv  Syn_n_50000_d_2_seed_4.csv  Syn_n_50000_d_2_seed_6.csv  Syn_n_50000_d_2_seed_7.csv  Syn_n_50000_d_2_seed_9.csv  Syn_n_5000_d_2_seed_1.csv  Syn_n_5000_d_2_seed_2.csv  Syn_n_5000_d_2_seed_3.csv  Syn_n_5000_d_2_seed_4.csv  Syn_n_5000_d_2_seed_7.csv  Syn_n_5000_d_2_seed_8.csv  Syn_n_5000_d_2_seed_9.csv
datasets2/: Syn_n_100000_d_2_seed_4.csv  Syn_n_100000_d_2_seed_5.csv  Syn_n_100000_d_2_seed_9.csv
datasets3/: Syn_n_100000_d_2_seed_0.csv  Syn_n_100000_d_2_seed_1.csv  Syn_n_100000_d_2_seed_2.csv  Syn_n_100000_d_2_seed_3.csv
datasets_real/: 01_.csv
outs/: 50k_exp2.csv  Syn_n_50000_d_2_seed_0_exp2.csv  (+16 more)
(+255 files in other folders)
