[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=59.0.0", 
    "numpy",
    "wheel"
    ]

[project]
name = "accelerated_sequence_clustering"
version = "1.0.0"
description = "Fast sequence clustering module"
authors = [{ name = "Reza Mortazavi", email = "ir1979@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sequence", "data clustering", "grouping"]
dependencies = [
    "numpy >= 1.23.4",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/ir1979/ASCM"
