[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=58.0.0", 
    "numpy",
    "wheel"
    ]

[project]
name = "accelerated_sequence_clustering"
version = "1.0.2"
description = "Fast sequence clustering module"
authors = [{ name = "Reza Mortazavi", email = "ir1979@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sequence", "data clustering", "grouping"]

# dependencies = [
#    "numpy >= 1.22",
# ]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ir1979/ASCM"
